--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,10 @@
-baseurl = "https://example.com/"  # End your URL with a `/` trailing slash.
+#Start of Jason Added
+publishDir = "docs"
+#End of Jason Added
+
+baseurl = "https://jasonkuruzovich.com/"  # End your URL with a `/` trailing slash.
 title = "Academic"
-copyright = "&copy; 2016 Your Name"
+copyright = "&copy; 2017 Jason Kuruzovich"
 theme = "academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
