--- a/config.toml
+++ b/config.toml
@@ -2,8 +2,8 @@
 publishDir = "docs"
 #End of Jason Added
 
-baseurl = "https://jasonkuruzovich.com/"  # End your URL with a `/` trailing slash.
-title = "Academic"
+baseurl = "http://jkuruzovich.github.io/jasonkuruzovich.com/"  # End your URL with a `/` trailing slash.
+title = "Launch"
 copyright = "&copy; 2017 Jason Kuruzovich"
 theme = "academic"
 enableEmoji = true
